--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
+button{
+  position: absolute;
+  top: 0;
+}
+
+#button2{
+  position: absolute;
+  left: 80px;
+}
+
 body{
     font-family: 'Nunito';
 }
@@ -35,9 +45,9 @@ h2{
     margin: 0 20px;
 }
 
-#output strong{
+/*#output strong{
     color: #575ed8;
-}
+}*/
 
 label{
     box-sizing: border-box;
@@ -59,11 +69,5 @@ input{
 }
 
 button{
-    background: #575ed8;
-    color: #fff;
-    font-size: 18px;
-    border: 0;
-    padding: 12px 0;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
+
 }
