--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,42 @@
 button{
-  position: absolute;
-  top: 0;
+  position: fixed;
+  bottom: 0;
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 50vw;
+  border-top: solid;
+  border-top-color: #d8d8d8;
+  border-top-width: 2px;
+  border-right: solid;
+  border-right-width: 1px;
+  border-right-color: #d8d8d8;
+  font-weight: bold;
+}
+button:active{
+  color: gray;
 }
 
 #button2{
-  position: absolute;
-  left: 80px;
+  left: 50vw;
+  color: gray;
+}
+
+#button2:focus{
+  left: 50vw;
+  color: black;
+}
+br {
+line-height: 200%;
 }
 
 body{
-    font-family: 'Nunito';
+    font-family: 'helvetica';
     margin: 0;
 }
 
@@ -26,8 +53,10 @@ a-scene{
 }
 
 .info{
-  height: 50vh;
-  margin-top: 50vh;
+  margin-top: 52vh;
+  margin-left: 12px;
+  margin-right: 12px;
+  margin-bottom: 100px;
 }
 
 #info2{
