--- a/public/style.css
+++ b/public/style.css
@@ -71,6 +71,31 @@ a-scene{
   display: none;
 }
 
+#startscreen{
+    background-color: black ;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+    color: white;
+    opacity: 1;
+    -webkit-transition: opacity 1000ms linear;
+    transition: opacity 1000ms linear;
+}
+#starttext{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 43vh;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+#starttext h3{
+  margin-top: 150px;
+}
+
 @media screen and (min-width: 1100px) {
     #buttons{
       top:0;
