--- a/public/style.css
+++ b/public/style.css
@@ -87,10 +87,10 @@ a-scene{
 #starttext{
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
-  margin-top: 43vh;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin-top: 40vh;
+  padding-left: 10vw;
+  padding-right: 30px;
+  max-width: 600px;
 }
 #starttext h3{
   margin-top: 150px;
@@ -149,4 +149,10 @@ a-scene{
 
 
 
+}
+
+@media screen and (min-width: 800px) {
+  #starttext{
+    text-align: center;
+  }
 }
